--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -22,14 +22,6 @@
   ],
   "author": "Qren Discord Bots Team",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-username/qren-discord-bots.git"
-  },
-  "bugs": {
-    "url": "https://github.com/your-username/qren-discord-bots/issues"
-  },
-  "homepage": "https://github.com/your-username/qren-discord-bots#readme",
   "dependencies": {
     "discord.js": "^14.21.0",
     "express": "^5.1.0",
